--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 </span>
                             </button>
                         </a>
-                        <a class="header-link header-links" href="gh.html">
+                        <a class="header-link header-links last" href="gh.html">
                             <button class="link">
                                 公会专属
                                 <span class="des">
@@ -94,7 +94,7 @@
                 <div class="ribbon-notice">
                     <div class="section-content section-content-notice">
                         <span class="ribbon-copy variant">
-                            本网页由玩家所创，非官方所经营。以下所有内容有任何错误，还请海涵。内容将持续更新，敬请期待!
+                            本网页由玩家所创，非官方所经营。以下所有内容有任何错误，还请海涵。
                         </span>
                     </div>
                 </div>
@@ -140,13 +140,16 @@
                                 </div>
                                 <div class="content">
                                     <span>
-                                        请到奇幻弹弹堂的
+                                        点击
                                         <a href="https://fantasyddt.com/game/register.php">游戏注册</a>
-                                        页面进行注册。
+                                        跳转到注册页面进行注册。
                                     </span>
                                     <br><br>
                                     <span class="notice">
-                                        *请依照指示进行注册，勿泄漏游戏账户和密码给他人。游戏昵称和性别可在游戏内花费点券进行更改。买号的玩家需购买素材配套才给予更改密码和邮箱的机会，详情请询问奇幻弹弹堂官方面子书/微信客服。
+                                        <b>注意：</b><br>
+                                        （一）请依照指示进行注册，勿泄漏游戏账户和密码给他人。<br>
+                                        （二）游戏昵称和性别可在游戏内花费点券进行更改。<br>
+                                        （三）购买账号的玩家需购买“素材配套”才给予更改密码和邮箱的机会，详情请询问奇幻弹弹堂官方面子书 / 微信客服。
                                     </span>
                                 </div>
                             </div>
@@ -167,7 +170,9 @@
                                     </span>
                                     <br><br>
                                     <span class="notice">
-                                        *只有电脑端（Windows）的玩家能下载并使用登录器。手机端的玩家请下载并使用“Puffin”才能正常登录。<a href="https://fantasyddt.com/game/ ">手机端登录</a>
+                                        <b>注意：</b><br>
+                                        （一）登陆器只有在电脑端（Windows）才能使用。<br>
+                                        （二）移动端的玩家请下载并使用“Puffin Pro”才能正常游戏。<a href="https://fantasyddt.com/game/ ">移动端登录链接</a>
                                     </span>
                                 </div>
                             </div>
@@ -201,7 +206,7 @@
                                     <span>
                                         弹弹堂提供不同价位的配套，亦在不同时段提供限时配套，想要了解详情，请到
                                         <a href="https://www.facebook.com/FantasyDDTank/">奇幻弹弹堂官方面子书</a>
-                                        或微信质询客服。亦或者可以到本网站的<a href="Topup.html">充值配套</a>看看。理性游戏，理性充值。
+                                        或微信质询客服。亦或者可以浏览本网站的<a href="Topup.html">充值配套</a>。理性游戏，理性充值。
                                     </span>
                                 </div>
                             </div>
@@ -217,7 +222,7 @@
                                 <div class="content">
                                     <div class="bar-container">
                                         <!-- 01 -->
-                                        <div class="bar-content">
+                                        <div id="countdown-01-title" class="bar-content">
                                             <div id="bar01">
                                                 <div></div>
                                             </div>
@@ -225,8 +230,8 @@
                                                 【万圣节】活动
                                             </span>
                                         </div>
-                                        <div class="badge-content">
-                                            <ul id="countdown-01">
+                                        <div id="countdown-01-time" class="badge-content">
+                                            <ul>
                                                 <li id="c-days-01">
                                                     <p class="name">
                                                         剩余
@@ -258,7 +263,7 @@
                                             </ul>
                                         </div>
                                         <!-- 02 -->
-                                        <div class="bar-content">
+                                        <div id="countdown-02-title" class="bar-content">
                                             <div id="bar02">
                                                 <div></div>
                                             </div>
@@ -266,8 +271,8 @@
                                                 五月装备返场
                                             </span>
                                         </div>
-                                        <div class="badge-content">
-                                            <ul id="countdown-02">
+                                        <div id="countdown-02-time" class="badge-content">
+                                            <ul>
                                                 <li id="c-days-02">
                                                     <p class="name">
                                                         剩余
@@ -299,7 +304,7 @@
                                             </ul>
                                         </div>
                                         <!-- 03 -->
-                                        <div class="bar-content">
+                                        <div id="countdown-03-title" class="bar-content">
                                             <div id="bar03">
                                                 <div></div>
                                             </div>
@@ -307,8 +312,8 @@
                                                 十一月累积消费
                                             </span>
                                         </div>
-                                        <div class="badge-content">
-                                            <ul id="countdown-03">
+                                        <div id="countdown-03-time" class="badge-content">
+                                            <ul>
                                                 <li id="c-days-03">
                                                     <p class="name">
                                                         剩余
