--- a/index.html
+++ b/index.html
@@ -182,14 +182,12 @@
                             <div class="container">
                                 <div class="title">
                                     <span>
-                                        开服礼包
+                                        新手礼包
                                     </span>
                                 </div>
                                 <div class="content">
                                     <span>
-                                        到
-                                        <a href="https://www.facebook.com/FantasyDDTank/">奇幻弹弹堂官方面子书</a>
-                                        私信客服“听说开服送礼包？”并提供角色名字，客服就会把礼包发到指定角色的邮箱。
+                                        到游戏内的  <b>活动 > 限时活动 > 【福利】新手礼包</b>  领取。
                                     </span>
                                 </div>
                             </div>
