--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 </span>
                             </button>
                         </a>
-                        <a class="header-link header-links" href="bugcom.html">
+                        <a class="header-link header-links" href="Bugcom.html">
                             <button class="link">
                                 漏洞合集
                                 <span class="des">
@@ -337,6 +337,47 @@
                                                     <p class="name">
                                                         剩余
                                                         <span id="seconds-03" class="numbers">00</span>
+                                                        秒
+                                                    </p>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <!-- 04 -->
+                                        <div id="countdown-04-title" class="bar-content">
+                                            <div id="bar04">
+                                                <div></div>
+                                            </div>
+                                            <span class="bar-caption">
+                                                奇幻S1赛季
+                                            </span>
+                                        </div>
+                                        <div id="countdown-04-time" class="badge-content">
+                                            <ul>
+                                                <li id="c-days-04">
+                                                    <p class="name">
+                                                        剩余
+                                                        <span id="days-04" class="numbers">00</span>
+                                                        天
+                                                    </p>
+                                                </li>
+                                                <li id="c-hours-04">
+                                                    <p class="name">
+                                                        剩余
+                                                        <span id="hours-04" class="numbers">00</span>
+                                                        小时
+                                                    </p>
+                                                </li>
+                                                <li id="c-minutes-04">
+                                                    <p class="name">
+                                                        剩余
+                                                        <span id="minutes-04" class="numbers">00</span>
+                                                        分钟
+                                                    </p>
+                                                </li>
+                                                <li id="c-seconds-04">
+                                                    <p class="name">
+                                                        剩余
+                                                        <span id="seconds-04" class="numbers">00</span>
                                                         秒
                                                     </p>
                                                 </li>
@@ -1294,5 +1335,6 @@ document.getElementById("DOpen").click();
 <script type="text/javascript" src="js/countdown01.js"></script>
 <script type="text/javascript" src="js/countdown02.js"></script>
 <script type="text/javascript" src="js/countdown03.js"></script>
+<script type="text/javascript" src="js/countdown04.js"></script>
 
 </html>
