--- a/Bugcom.html
+++ b/Bugcom.html
@@ -674,6 +674,24 @@
                                     </a>
                                 </div>
                             </li>
+                            <li class="small-container">
+                                <div class="container">
+                                    <a>
+                                        <div class="title">
+                                            <span>
+                                                称号管理
+                                            </span>
+                                        </div>
+                                        <div class="content">
+                                            <span>
+                                                称号过期后开启“相同名字”的称号卡，系统依旧判断过期。
+                                                <br><br>
+                                                <b>解决方法</b>：先使用其他的称号，再开启新的称号卡，然后再使用该称号。
+                                            </span>
+                                        </div>
+                                    </a>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
