--- a/Bugcom.html
+++ b/Bugcom.html
@@ -72,7 +72,7 @@
                                 </span>
                             </button>
                         </a>
-                        <a class="header-link header-links last" href="gh.html">
+                        <a class="header-link header-links last" href="Gh.html">
                             <button class="link">
                                 公会专属
                                 <span class="des">
