--- a/IPT/Gh.html
+++ b/IPT/Gh.html
@@ -141,7 +141,7 @@
                                 </div>
                                 <div class="content">
                                     <span>
-                                        请没充值的新手先到游戏内的  <b>活动 > 限时活动 > 【福利】新手礼包</b>  领取新手礼包并穿戴。完成后即可开始阅读。
+                                        请没充值的新手先到游戏内的 <b>活动 > 限时活动 > 【福利】新手礼包</b> 领取新手礼包并穿戴。完成后即可开始阅读。
                                         <br><br>
                                         对于一个新手来说最重要的是“属性”，并不是“战力”！所以应该以提升属性为主，其中以“攻击”和“敏捷”最为重要，需作为主要提升的属性。
                                         <br><br>
@@ -224,9 +224,9 @@
                                         <br><br>
                                         市面上有众多的软件能执行“脚本”指令，但这里推荐“<a href="https://www.jitbit.com/macro-recorder/">Jitbit Macro Recorder</a>”。玩家可以在网上或者油管（YouTube）上找到相关的破解视频或者解密钥匙。这里提供了一个账号和密码；
                                         <br><br>
-                                        <b>Username:</b> On HAX
+                                        <b>Username:</b> <input type="text" value="On HAX" id="UserName" disabled> <button class="copy-button" onclick="copyFunction1()">复制</button>
                                         <br>
-                                        <b>Serial Number:</b> ENokcYSKQS1XsrhrqKC6j+ieiSJkwolCD9ZBFro59VlmwKz/J4AfCP7+
+                                        <b>Serial Number:</b> <input type="text" value="ENokcYSKQS1XsrhrqKC6j+ieiSJkwolCD9ZBFro59VlmwKz/J4AfCP7+" id="PassW" disabled> <button class="copy-button" onclick="copyFunction2()">复制</button>
                                         <br><br>
                                         下载完成并输入密钥后即可开始录制。首先，点击“Record”开始操作。操作结束后点击“Stop”，随后点击“Play”即可。如需要无限的执行指令，需要到“Settings” > “Playback settings”，将“replay”改成0 time即可。
                                         <br><br>
@@ -691,9 +691,9 @@
                                     </div>
                                     <div class="content">
                                         <span>
-                                            •   𝒳ღ<br>
-                                            •   辉少<br>
-                                            •   ༄あ七ღ
+                                            • 𝒳ღ<br>
+                                            • 辉少<br>
+                                            • ༄あ七ღ
                                         </span>
                                     </div>
                                 </div>
@@ -708,9 +708,9 @@
                                     </div>
                                     <div class="content">
                                         <span>
-                                            •   秦深<br>
-                                            •   辉少<br>
-                                            •   ༄あ七ღ
+                                            • 秦深<br>
+                                            • 辉少<br>
+                                            • ༄あ七ღ
                                         </span>
                                     </div>
                                 </div>
@@ -725,11 +725,11 @@
                                     </div>
                                     <div class="content">
                                         <span>
-                                            •   辉少<br>
-                                            •   念๓<br>
-                                            •   冰╮ιCe┉╃<br>
-                                            •   ☪ゞ瑄瑄އއ<br>
-                                            •   ༄あ七ღ
+                                            • 辉少<br>
+                                            • 念๓<br>
+                                            • 冰╮ιCe┉╃<br>
+                                            • ☪ゞ瑄瑄އއ<br>
+                                            • ༄あ七ღ
                                         </span>
                                     </div>
                                 </div>
@@ -744,8 +744,8 @@
                                     </div>
                                     <div class="content">
                                         <span>
-                                            •   念๓<br>
-                                            •   ༄あ七ღ
+                                            • 念๓<br>
+                                            • ༄あ七ღ
                                         </span>
                                     </div>
                                 </div>
@@ -760,7 +760,7 @@
                                     </div>
                                     <div class="content">
                                         <span>
-                                            •   念๓
+                                            • 念๓
                                         </span>
                                     </div>
                                 </div>
@@ -775,11 +775,11 @@
                                     </div>
                                     <div class="content">
                                         <span>
-                                            •   暮光<br>
-                                            •   小可爱来了<br>
-                                            •   ☪ゞ瑄瑄އއ<br>
-                                            •   ༄あ七ღ<br>
-                                            •   辉少
+                                            • 暮光<br>
+                                            • 小可爱来了<br>
+                                            • ☪ゞ瑄瑄އއ<br>
+                                            • ༄あ七ღ<br>
+                                            • 辉少
                                         </span>
                                     </div>
                                 </div>
@@ -808,6 +808,22 @@ function openEventP(evt, cityName) {
 
 // Get the element with id="defaultOpen" and click on it
 document.getElementById("DOpen").click();
+</script>
+<script type="text/javascript">
+function copyFunction1() {
+    var copyText = document.getElementById("UserName");
+    copyText.select();
+    copyText.setSelectionRange(0, 99999);
+    navigator.clipboard.writeText(copyText.value);
+}
+</script>
+<script type="text/javascript">
+function copyFunction2() {
+    var copyText = document.getElementById("PassW");
+    copyText.select();
+    copyText.setSelectionRange(0, 99999);
+    navigator.clipboard.writeText(copyText.value);
+}
 </script>
 <script type="text/javascript">
 function myS1Function() {
