--- a/IPT/Gh.html
+++ b/IPT/Gh.html
@@ -26,7 +26,7 @@
                     </label>
                 </li>
                 <li class="header-item header-item-logo">
-                    <a class="header-link mobile-logo" href="index.html">
+                    <a class="header-link mobile-logo" href="../index.html">
                         <button class="logo">奇幻弹弹堂</button>
                     </a>
                 </li>
@@ -35,7 +35,7 @@
             <div class="list-container">
                 <ul class="header-list">
                     <li class="header-item header-item-logo">
-                        <a class="header-link" href="index.html">
+                        <a class="header-link" href="../index.html">
                             <button class="logo">奇幻弹弹堂</button>
                         </a>
                     </li>
