--- a/GameScript.html
+++ b/GameScript.html
@@ -347,7 +347,7 @@
                                         </div>
                                         <div class="content">
                                             <span>
-                                                情定终身+4，高级祭品，封印石，魔法宝珠-伤害Lv17，魔法宝珠-伤害Lv19，烈焰神龙碎片，陆行鸟图鉴卡，【奇幻】⭐帽子箱⭐，【奇幻】⭐衣服箱⭐，【奇幻】⭐头发箱⭐，【奇幻】⭐眼睛箱⭐，【奇幻】极·远古竹枪，大力娃，千里娃，铁臂娃，唠叨老豆，顽皮野孩儿，【奇幻】初段进阶证，【奇幻】贰段进阶证，【奇幻】叄段进阶证，【奇幻】锻造石，【奇幻活动素材】，限时添加：【奇幻】拿你命3000
+                                                情定终身+4，高级祭品，封印石，魔法宝珠-伤害Lv17，魔法宝珠-伤害Lv19，烈焰神龙碎片，陆行鸟图鉴卡，【奇幻】⭐帽子箱⭐，【奇幻】⭐衣服箱⭐，【奇幻】⭐头发箱⭐，【奇幻】⭐眼睛箱⭐，【奇幻】极·远古竹枪，大力娃，千里娃，铁臂娃，唠叨老豆，顽皮野孩儿，【奇幻】初段进阶证，【奇幻】贰段进阶证，【奇幻】叄段进阶证，【奇幻】锻造石，【奇幻】拿你命3000，【奇幻】遗失法典初级碎片，【奇幻活动素材】
                                             </span>
                                         </div>
                                     </a>
@@ -379,7 +379,7 @@
                                         </div>
                                         <div class="content">
                                             <span>
-                                                璀璨手册，初级坐骑升级石，中级坐骑升级石，注灵石，【奇幻】奇幻拼图碎片，图腾符石，属性宝珠Lv4，【奇幻】⭐脸颊箱⭐，【奇幻】⭐眼镜箱⭐，【奇幻】⭐套装箱⭐，【奇幻】⭐翅膀箱⭐，【奇幻】拿你命3000，F炮图鉴卡，精致牛头斧，精致牛头帽，精致牛头甲，聚水娃，隐身娃，喷火娃，忠心随从，憨厚大叔，【奇幻】初段进阶证，【奇幻】贰段进阶证，【奇幻】叄段进阶证，【奇幻】锻造石，【奇幻】修炼潜能石，【奇幻活动素材】
+                                                璀璨手册，中级坐骑升级石，高级坐骑升级石，注灵石，【奇幻】奇幻拼图碎片，图腾符石，属性宝珠Lv4，【奇幻】⭐脸颊箱⭐，【奇幻】⭐眼镜箱⭐，【奇幻】⭐套装箱⭐，【奇幻】⭐翅膀箱⭐，【奇幻】拿你命3000，聚水娃，隐身娃，喷火娃，忠心随从，憨厚大叔，【奇幻】初段进阶证，【奇幻】贰段进阶证，【奇幻】叄段进阶证，【奇幻】锻造石，【奇幻】修炼潜能石，【奇幻】遗失法典初级碎片，【奇幻活动素材】
                                             </span>
                                         </div>
                                     </a>
@@ -603,19 +603,26 @@
                                         </div>
                                         <div class="content">
                                             <span>
-                                                一至三层礼包（超级经验药水*30，铜块*50，银丝*50，玉髓*50）
+                                                <b>一至三层礼包</b><br>
+                                                超级经验药水*30，铜块*50，银丝*50，玉髓*50
                                                 <br><br>
-                                                四层礼包（超级经验药水*50，桶块*50，银丝*50，玉髓*50，经验手镯+3*2，高级祭品*500，荣誉精华*100）
+                                                <b>四层礼包</b><br>
+                                                超级经验药水*50，桶块*50，银丝*50，玉髓*50，经验手镯+3*2，高级祭品*500，荣誉精华*100
                                                 <br><br>
-                                                五层礼包（超级经验药水*30，桶块*50，银丝*50，玉髓*50，经验手镯+3*2，凝神药水2级*50，战魂丹*300，新春大红包*3）
+                                                <b>五层礼包</b><br>
+                                                超级经验药水*30，桶块*50，银丝*50，玉髓*50，经验手镯+3*2，凝神药水2级*50，战魂丹*300，新春大红包*3
                                                 <br><br>
-                                                六层礼包（超级经验药水*30，桶块*50，银丝*30，玉髓*50，新春大红包*3，神秘卡盒*400，注灵石*300）
+                                                <b>六层礼包</b><br>
+                                                超级经验药水*30，桶块*50，银丝*30，玉髓*50，新春大红包*3，神秘卡盒*400，注灵石*300
                                                 <br><br>
-                                                七层礼包（超级经验药水*30，桶块*50，银丝*50，玉髓*50，新春大红包*3，9级宝珠盒子*50，坐骑图鉴碎片*100，初级坐骑升级石*100，中级坐骑升级石*50）
+                                                <b>七层礼包</b><br>
+                                                超级经验药水*30，桶块*50，银丝*50，玉髓*50，新春大红包*3，9级宝珠盒子*50，坐骑图鉴碎片*100，初级坐骑升级石*100，中级坐骑升级石*50
                                                 <br><br>
-                                                八层礼包（超级经验药水*30，桶块*50，银丝*50，玉髓*50，经验手镯+4*2，冰棒*5，腊八粥*5，五色饭*5）
+                                                <b>八层礼包</b><br>
+                                                超级经验药水*30，桶块*50，银丝*50，玉髓*50，经验手镯+4*2，冰棒*5，腊八粥*5，五色饭*5
                                                 <br><br>
-                                                九层礼包（超级经验药水*30，桶块*50，银丝*50，玉髓*50，经验手镯+4*2）
+                                                <b>九层礼包</b><br>
+                                                超级经验药水*30，桶块*50，银丝*50，玉髓*50，经验手镯+4*2
                                             </span>
                                         </div>
                                     </a>
