--- a/index.html
+++ b/index.html
@@ -609,15 +609,17 @@
                                                         每天有一次挑战的机会，根据玩家造成的伤害来给予奖励。建议玩家每天进行挑战，挑战前请务必购买BUFF增加伤害。
                                                         <br><br>
                                                         <b>奖励：</b><br>
-                                                        【奇幻】一级年兽箱子：开孔钻头1级*50，开孔钻头2级*50，开孔钻头3级*50，进阶石*50，坐骑图鉴碎片*50，初级坐骑升级石*50，荣誉精华*50
+                                                        <b>【奇幻】一级年兽箱子</b><br>开孔钻头1级*50，开孔钻头2级*50，开孔钻头3级*50，进阶石*50，坐骑图鉴碎片*50，初级坐骑升级石*50，荣誉精华*50
                                                         <br><br>
-                                                        【奇幻】二级年兽箱子：开孔钻头1级*50，开孔钻头2级*50，开孔钻头3级*50，封印石*30，坐骑升级丹*200，坐骑图鉴碎片*100，荣誉精华*50
+                                                        <b>【奇幻】二级年兽箱子</b><br>开孔钻头1级*50，开孔钻头2级*50，开孔钻头3级*50，封印石*30，坐骑升级丹*200，坐骑图鉴碎片*100，荣誉精华*50
                                                         <br><br>
-                                                        【奇幻】三级年兽箱子：开孔钻头4级*50，开孔钻头5级*50，战魂丹*200，圣火之炬碎片*2，远古幼龙高级封印*2，属性宝珠Lv4*2，荣誉精华*100
+                                                        <b>【奇幻】三级年兽箱子</b><br>开孔钻头4级*50，开孔钻头5级*50，战魂丹*200，圣火之炬碎片*2，远古幼龙高级封印*2，属性宝珠Lv4*2，荣誉精华*100
                                                         <br><br>
-                                                        【奇幻】四级年兽箱子：战魂丹*200，魂晶盒(中)*10，坐骑图鉴碎片*30，初级坐骑升级石*50，中级坐骑升级石*50，路瑟法碎片*1，真.爱心回力标高级碎片*2，真.牛头怪高级碎片*2，真·远古竹枪高级碎片*2
+                                                        <b>【奇幻】四级年兽箱子</b><br>
+                                                        战魂丹*200，魂晶盒(中)*10，坐骑图鉴碎片*30，初级坐骑升级石*50，中级坐骑升级石*50，路瑟法碎片*1，真.爱心回力标高级碎片*2，真.牛头怪高级碎片*2，真·远古竹枪高级碎片*2
                                                         <br><br>
-                                                        【奇幻】五级年兽箱子：冰晶凤凰高级封印*2，高级神器碎片箱*3，高级祭品*200，灵魂石*500，注灵石*500，荣誉精华*300，战魂丹*600，初级坐骑升级石*200，中级坐骑升级石*200
+                                                        <b>【奇幻】五级年兽箱子</b><br>
+                                                        冰晶凤凰高级封印*2，高级神器碎片箱*3，高级祭品*200，灵魂石*500，注灵石*500，荣誉精华*300，战魂丹*600，初级坐骑升级石*200，中级坐骑升级石*200
                                                         <br><br>
                                                         <span class="NTC"><b>贴士：</b>伤害不高的玩家可使用宠物 – 小鸡/小毒鸡的宠物技能【V3炮台】进行伤害叠加再配合坐骑技能【重创】 / 【穿甲】进行攻击。</span>
                                                     </span>
@@ -845,7 +847,10 @@
                                                         <br><br>
                                                         <span class="NTC"><b>贴士：</b>伤害不高的玩家可使用宠物 – 小鸡/小毒鸡的宠物技能【V3炮台】进行伤害叠加再配合攻击宝珠【吸血】。【V3炮台】若点不出来，请快速并连续的点击此技能直至技能使用。</span>
                                                         <br><br>
-                                                        <span class="ATT"><b>注意：</b>（一）请理性叠加【V3炮台】，玩家可能因为过高的炮台层数 + 攻击宝珠【吸血】，导致自身死亡。（二）世界BOSS通常在开始后一分钟左右（40秒）死亡，BOSS死亡后玩家将不能进入。</span>
+                                                        <span class="ATT"><b>注意：</b><br>
+                                                        （一）请理性叠加【V3炮台】，玩家可能因为过高的炮台层数 + 攻击宝珠【吸血】，导致自身死亡。<br>
+                                                        （二）世界BOSS通常在开始后一分钟左右（40秒）死亡，BOSS死亡后玩家将不能进入。
+                                                        </span>
                                                         <br><br>
                                                         <span class="JY"><b>兑换建议：</b>建议兑换“荣誉精华”和“神秘卡牌”。</span>
                                                     </span>
@@ -1172,7 +1177,10 @@
                                                         <br><br>
                                                         <span class="JY"><b>建议：</b>高级进阶选择“超伤”宝珠。</span>
                                                         <br><br>
-                                                        <span class="ATT"><b>注意：</b>（一）进行高级进阶时需确保有一页的空白，否则进阶出的宝珠将直接消失。（二）通过每周二和四马来西亚时间晚上七时（1900）到八时（2000）挑战【宝珠副本】所获得的“双倍宝珠”需手动进行分离，否则“批量合成”系统将判定为一颗。（通过点击宝珠再点击空白处进行分离）</span>
+                                                        <span class="ATT"><b>注意：</b><br>
+                                                        （一）进行高级进阶时需确保有一页的空白，否则进阶出的宝珠将直接消失。<br>
+                                                        （二）通过每周二和四马来西亚时间晚上七时（1900）到八时（2000）挑战【宝珠副本】所获得的“双倍宝珠”需手动进行分离，否则“批量合成”系统将判定为一颗。（通过点击宝珠再点击空白处进行分离）
+                                                        </span>
                                                     </span>
                                                 </div>
                                             </div>
@@ -1202,7 +1210,10 @@
                                                     <span>
                                                         魔石有着不同的种类和品质。可通过挑战副本，官方购买和完成任务获得。不同颜色的魔石代表着不同的质量，不同类型的魔石拥有不同的属性。魔石最高为10级，10级的魔石不能用做“祭品”来提升其他魔石的等级。
                                                         <br><br>
-                                                        <span class="ATT"><b>注意：</b>（一）相同属性的“单属魔石”或“二圣魔石”无法重复装备。（二）“探索”，“批量探索”和“魔穴探险”无法使用。</span>
+                                                        <span class="ATT"><b>注意：</b><br>
+                                                        （一）相同属性的“单属魔石”或“二圣魔石”无法重复装备。<br>
+                                                        （二）“探索”，“批量探索”和“魔穴探险”无法使用。
+                                                        </span>
                                                     </span>
                                                 </div>
                                             </div>
