--- a/IPT/Gh.html
+++ b/IPT/Gh.html
@@ -173,7 +173,10 @@
                                     <span>
                                         点击粉色的“领取奖励”领取你要的素材。接着，再挑战一场【蚂蚁之巢】。完成后没有显示以上图片所示的通知，请不要惊慌。请点击通知栏的“上滚”寻找上一场挑战【蚂蚁之巢】所显示的通知，并点击粉色的“领取奖励”，即可领取你要的素材。从第三场开始“任务”就会开始闪烁，请点击“任务”进行奖励领取。
                                         <br><br>
-                                        <span class="ATT"><b>注意：</b>（一）退出登录，卡副本失效，需要重新操作以上步骤。（二）挑战不同的【每日】副本需要重复以上操作，换而言之挑战同一个副本只需要操作一次。</span>
+                                        <span class="ATT"><b>注意：</b><br>
+                                            （一）退出登录，卡副本失效，需要重新操作以上步骤。<br>
+                                            （二）挑战不同的【每日】副本需要重复以上操作，换而言之挑战同一个副本只需要操作一次。
+                                        </span>
                                     </span>
                                 </div>
                             </div>
@@ -359,7 +362,10 @@
                                             <br>
                                             向右边 角度：最高 力度：57 打BOSS
                                             <br><br>
-                                            <span class="ATT"><b>注意：</b>（一）记录脚本时需要等待倒数秒数剩余4s时才开始使用道具和攻击。（二）此脚本还是有极小的几率无法清完鬼火。</span>
+                                            <span class="ATT"><b>注意：</b><br>
+                                                （一）记录脚本时需要等待倒数秒数剩余4s时才开始使用道具和攻击。<br>
+                                                （二）此脚本还是有极小的几率无法清完鬼火。
+                                            </span>
                                         </span>
                                     </div>
                                 </div>
