--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                                 <div></div>
                                             </div>
                                             <span class="bar-caption">
-                                                【万圣节】活动
+                                                【圣诞节】活动
                                             </span>
                                         </div>
                                         <div id="countdown-01-time" class="badge-content">
@@ -266,7 +266,7 @@
                                                 <div></div>
                                             </div>
                                             <span class="bar-caption">
-                                                五月装备返场
+                                                六月装备返场
                                             </span>
                                         </div>
                                         <div id="countdown-02-time" class="badge-content">
@@ -307,7 +307,7 @@
                                                 <div></div>
                                             </div>
                                             <span class="bar-caption">
-                                                十一月累积消费
+                                                十二月累积消费
                                             </span>
                                         </div>
                                         <div id="countdown-03-time" class="badge-content">
