--- a/GameScript.html
+++ b/GameScript.html
@@ -219,7 +219,7 @@
                                         </div>
                                         <div class="content">
                                             <span>
-                                                真·三色花的祝福，超级经验药水，攻击祝福宝珠，防御祝福宝珠，属性祝福宝珠，坐骑之灵，宠物之灵，坐骑图鉴碎片，守护之心，荣誉精华，魔法宝珠-伤害Lv15，魔法宝珠-伤害Lv13，星宿之佑高级碎片，守护法典高级碎片，灵魂石，樱桃，荔枝，【奇幻】邪神的面具，【奇幻】紫宝石
+                                                【奇幻】邪之竹枪，真·三色花的祝福，超级经验药水，攻击祝福宝珠，防御祝福宝珠，属性祝福宝珠，坐骑之灵，宠物之灵，坐骑图鉴碎片，守护之心，荣誉精华，魔法宝珠-伤害Lv15，魔法宝珠-伤害Lv13，星宿之佑高级碎片，守护法典高级碎片，灵魂石，樱桃，荔枝，【奇幻】邪神的面具，【奇幻】紫宝石
                                             </span>
                                         </div>
                                     </a>
@@ -235,7 +235,7 @@
                                         </div>
                                         <div class="content">
                                             <span>
-                                                恶魔宝珠·红，高级宠物粮，高级祭品，开孔钻头3级，低级祭品，破碎手册，完整手册，魔法宝珠-攻击Lv17，魔法宝珠-攻击Lv15，灵魂石，怒龙赤炎镯+5，荣誉精华，经验之戒+3，千叶草，芒果，荔枝，【奇幻】牛头的角，【奇幻】红宝石，【奇幻】蓝宝石，【奇幻】初段进阶证，【奇幻】贰段进阶证，【奇幻】叄段进阶证，【奇幻】锻造石
+                                                恶魔宝珠·红，高级宠物粮，高级祭品，开孔钻头3级，低级祭品，破碎手册，完整手册，魔法宝珠-攻击Lv17，魔法宝珠-攻击Lv15，灵魂石，怒龙赤炎镯+5，荣誉精华，经验之戒+3，千叶草，芒果，荔枝，【奇幻】牛头的角，【奇幻】红宝石，【奇幻】蓝宝石，【奇幻】初段进阶证，【奇幻】贰段进阶证，【奇幻】叄段进阶证，【奇幻】锻造石，【奇幻】黑暗堡垒图鉴包
                                             </span>
                                         </div>
                                     </a>
@@ -251,7 +251,7 @@
                                         </div>
                                         <div class="content">
                                             <span>
-                                                璀璨手册，开孔钻头4级，恶魔宝珠·黄，开孔钻头2级，开孔钻头3级，恶魔宝珠·红，兽皮，秘银，千叶草，萌化石，灵魂石，破碎手册，糖果，芒果，榴莲，【奇幻】紫宝石，【奇幻】绿宝石，【奇幻活动素材】
+                                                璀璨手册，开孔钻头4级，恶魔宝珠·黄，开孔钻头2级，开孔钻头3级，恶魔宝珠·红，兽皮，秘银，千叶草，萌化石，灵魂石，破碎手册，糖果，芒果，榴莲，【奇幻】紫宝石，【奇幻】绿宝石，【奇幻活动素材】，【奇幻】龙巢之战图鉴包
                                             </span>
                                         </div>
                                     </a>
@@ -283,7 +283,7 @@
                                         </div>
                                         <div class="content">
                                             <span>
-                                                恶魔宝珠·绿·，中级宠物粮，随机魔石礼包，经验魔石，陨金，魔钻，灵魂石，初级经验魔石，注灵石，超级经验药水，风勋章，火勋章，土勋章，木勋章，开孔钻头4级，开孔钻头5级，【奇幻】蓝宝石，【奇幻】紫宝石，【奇幻活动素材】
+                                                恶魔宝珠·绿·，中级宠物粮，随机魔石礼包，经验魔石，陨金，魔钻，灵魂石，初级经验魔石，注灵石，超级经验药水，风勋章，火勋章，土勋章，木勋章，开孔钻头4级，开孔钻头5级，【奇幻】蓝宝石，【奇幻】紫宝石，【奇幻活动素材】，【奇幻】时空漩涡图鉴包
                                             </span>
                                         </div>
                                     </a>
@@ -572,6 +572,22 @@
                                         <div class="content">
                                             <span>
                                                 【奇幻】噩梦·疯狂小鸡，【奇幻】噩梦·疯狂小鸡，【奇幻】噩梦·小鸡，【奇幻】圣斗士随机礼包，【奇幻】百年潜能石，经验之戒+5，荣誉精华，神秘卡盒，【奇幻】玄武精魄石，【奇幻】朱雀精魄石，【奇幻】青龙精魄石，【奇幻】白虎精魄石
+                                            </span>
+                                        </div>
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="small-container">
+                                <div class="container">
+                                    <a>
+                                        <div class="title">
+                                            <span>
+                                                噩梦副本-噩梦炸弹人
+                                            </span>
+                                        </div>
+                                        <div class="content">
+                                            <span>
+                                                【奇幻】马迪亚斯的铠甲（男），【奇幻】马迪亚斯的披风（女），【奇幻】粉红啵咕帽（男），【奇幻】粉红啵咕帽（女），【奇幻】啵咕宝饰（男），【奇幻】啵咕宝饰（女），经验手镯+5，经验之戒+5，【奇幻】百年潜能石，荣誉精华，神秘卡盒，【奇幻】玄武精魄石，【奇幻】朱雀精魄石，【奇幻】青龙精魄石，【奇幻】白虎精魄石
                                             </span>
                                         </div>
                                     </a>
