--- a/GameScript.html
+++ b/GameScript.html
@@ -142,7 +142,7 @@
                                     <span>
                                         以下内容可采用搜索的方式来搜索。
                                         <br><br>
-                                        【奇幻】万圣节糖果，【奇幻】鬼魂，【奇幻】南瓜 👉 一概输入【奇幻活动素材】
+                                        【奇幻】圣诞帽，【奇幻】圣诞树，【奇幻】圣诞袜 👉 一概输入【奇幻活动素材】
                                     </span>
                                 </div>
                             </div>
